# oagi-python

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: execute_task_manual.py  hotel_booking.py  multi_screen_execution.py  openai_agent_loop_example.py  tasker_agent_example.py
metapackage/: README.md  pyproject.toml
oagi/: __init__.py
src/oagi/: __init__.py  async_client.py  async_short_task.py  async_single_step.py  async_task.py  constants.py  logging.py  pil_image.py  platform_info.py  pyautogui_action_handler.py  screenshot_maker.py  short_task.py  single_step.py  sync_client.py  task.py
src/oagi/actor/: async_.py  async_short.py  base.py  short.py  sync.py
src/oagi/agent/: __init__.py  default.py  factories.py  protocol.py  registry.py
src/oagi/cli/: agent.py  utils.py
src/oagi/task/: base.py  (+4 more)
tests/: conftest.py  test_action_parsing.py  test_actor.py  test_agent_registry.py  test_async_actor.py  test_async_client.py  test_async_task.py  test_cli.py  test_llm_planner.py  test_logging.py  test_mac_double_click.py  test_oagi_action_converter.py  test_observer.py  test_planner.py  test_planner_agent.py  test_planner_memory.py  test_pyautogui_action_converter.py  test_pyautogui_action_handler.py  test_screenshot_maker.py  test_short_task.py  test_single_step.py  test_sync_client.py  test_task.py  test_taskee_agent.py  test_todo_agent.py
tests/test_agent/: test_default_agent.py
tests/test_server/: test_session_store.py  test_socketio_action_emission.py
tests/utils/: test_output_parser.py  test_prompt_builder.py
(+55 files in other folders)
