[build-system]
requires = ["hatchling==1.26.3", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "oagi"
version = "0.1.0"
description = "Official API of OpenAGI Foundation"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "OpenAGI Foundation", email = "contact@agiopen.org" }
]

requires-python = ">= 3.10"

dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/agiopen-org/oagi"

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]

[tool.ruff.lint]
extend-select = ["I"]